--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
                     <div class="p-slide">
                         <img src="img/pop-products/image-1.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 1</h4>
+                            <h4><a href=""> Product name 1</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-2.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 2</h4>
+                            <h4><a href=""> Product name 2</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-3.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 3</h4>
+                            <h4><a href=""> Product name 3</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-4.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 4</h4>
+                            <h4><a href=""> Product name 4</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
@@ -138,28 +138,28 @@
                     <div class="p-slide">
                         <img src="img/pop-products/image-1.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 5</h4>
+                            <h4><a href=""> Product name 5</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-2.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 6</h4>
+                            <h4><a href=""> Product name 6</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-3.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 7</h4>
+                            <h4><a href=""> Product name 7</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-4.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 8</h4>
+                            <h4><a href=""> Product name 8</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
@@ -167,28 +167,28 @@
                     <div class="p-slide">
                         <img src="img/pop-products/image-1.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 9</h4>
+                            <h4><a href=""> Product name 9</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-2.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 10</h4>
+                            <h4><a href=""> Product name 10</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-3.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 11</h4>
+                            <h4><a href=""> Product name 10</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-4.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 12</h4>
+                            <h4><a href=""> Product name 12</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
@@ -196,56 +196,56 @@
                     <div class="p-slide">
                         <img src="img/pop-products/image-1.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 13</h4>
+                            <h4><a href=""> Product name 13</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-2.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 14</h4>
+                            <h4><a href=""> Product name 14</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-3.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 15</h4>
+                            <h4><a href=""> Product name 15</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-4.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 16</h4>
+                            <h4><a href=""> Product name 16</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-1.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 17</h4>
+                            <h4><a href=""> Product name 17</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-2.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 18</h4>
+                            <h4><a href=""> Product name 18</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-3.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 19</h4>
+                            <h4><a href=""> Product name 19</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
                     <div class="p-slide">
                         <img src="img/pop-products/image-4.jpeg" alt="">
                         <div class="infos">
-                            <h4>Product name 20</h4>
+                            <h4><a href=""> Product name 20</a></h4>
                             <h3>$55.55</h3>
                         </div>
                     </div>
@@ -253,9 +253,9 @@
 
             </div>
             <div class="p-car-nav">
-                <span id="p-prev"><img src="img/Left.svg" alt="" srcset=""></span>
+                <img id="p-prev" src="img/Left.svg" alt="" srcset="">
 
-                <span id="p-next"><img src="img/Right.svg" alt="" srcset=""></span>
+                <img id="p-next" src="img/Right.svg" alt="" srcset="">
             </div>
         </section>
     </div>
