--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             </div>
             <div class="p-car-nav">
                 <img id="p-prev" src="img/Left.svg" alt="" srcset="">
-
+                <h5>4 out of 20</h5>
                 <img id="p-next" src="img/Right.svg" alt="" srcset="">
             </div>
         </section>
