--- a/index.html
+++ b/index.html
@@ -822,8 +822,9 @@
     <footer>
         <div class="f-nav-container">
             <div class="f-nav">
+                <p> Just another template 2020, no rights reserved so far.</p>  
                 <ul>
-                    <li>Just another template 2020, no rights reserved so far.</li>
+                   
                     <li><a href="">FAQ</a></li>
                     <li><a href="">Legal issues</a></li>
                     <li><a href="">Privacy policy</a></li>
